vpn-proxy/k8s/roles/templates/nginx-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-proxy-svc
spec:
  selector:
    app: vpn-proxy
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
    - port: 1194
      targetPort: 1194
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-proxy
  template:
    metadata:
      labels:
        app: vpn-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 1194
          volumeMounts:
            - name: certs
              mountPath: /etc/letsencrypt
            - name: config
              mountPath: /etc/nginx
      volumes:
        - name: certs
          persistentVolumeClaim:
            claimName: certs-pvc
        - name: config
          configMap:
            name: nginx-config
